--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <section id="boxes">
 	<div class="container">
 		<div class="box">
-			<img src="./img/HTML5.png" width="60" height="90">
+			<img src="./img/HTML5.png" >
 			<h3>HTML5 Markup</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua</p>
